--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,8 @@
       <!-- 광고1 -->
       <div class="ad ad1">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- Ad Unit 1 -->
           <ins class="adsbygoogle"
-               style="display:block"
+               style="display:inline-block; width:100%;"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="3603389079"
                data-ad-format="auto"
@@ -31,9 +30,8 @@
       <!-- 광고2 -->
       <div class="ad ad2">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- Ad Unit 2 -->
           <ins class="adsbygoogle"
-               style="display:block"
+               style="display:inline-block; width:100%;"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="9952845435"
                data-ad-format="auto"
@@ -48,6 +46,7 @@
     .ads-container {
         display: flex;
         gap: 10px;
+        justify-content: space-between;
     }
 
     .ad {
@@ -70,7 +69,6 @@
 
         <div class="footer-ad">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- Footer Ad Unit -->
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9374368296307755"
@@ -89,7 +87,6 @@
     <!-- 모바일 전용 광고 -->
     <div class="mobile-ad mobile-only">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- Mobile Ad Unit -->
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-9374368296307755"
