--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <div class="ad ad1">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <ins class="adsbygoogle"
-               style="display:inline-block; width:50%;"
+               style="display:inline-block; width:100%;"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="3603389079"
                data-ad-format="auto"
@@ -31,7 +31,7 @@
       <div class="ad ad2">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <ins class="adsbygoogle"
-               style="display:inline-block; width:50%;"
+               style="display:inline-block; width:100%;"
                data-ad-client="ca-pub-9374368296307755"
                data-ad-slot="9952845435"
                data-ad-format="auto"
@@ -45,12 +45,14 @@
     <style>
     .ads-container {
         display: flex;
+        flex-wrap: wrap; /* 필요한 경우 줄바꿈 허용 */
         gap: 10px;
         justify-content: space-between;
     }
 
     .ad {
-        width: 50%;
+        width: calc(50% - 10px); /* 여백을 고려한 반씩 나누기 */
+        box-sizing: border-box;
     }
     </style>
     {% endif %}
