--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,26 @@
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
       </div>
+
+      <!-- 추가된 상단 광고 (기존 하단 광고를 상단으로 이동) -->
+      <div class="ad ad3">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class="adsbygoogle"
+               style="display:inline-block; width:100%;"
+               data-ad-client="ca-pub-9374368296307755"
+               data-ad-slot="1724698171"
+               data-ad-format="auto"
+               data-full-width-responsive="true"></ins>
+          <script>
+               (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+      </div>
     </div>
 
     <style>
     .ads-container {
         display: grid;
-        grid-template-columns: 1fr 1fr; /* 두 광고가 가로로 나란히 배치되도록 설정 */
+        grid-template-columns: 1fr 1fr 1fr; /* 세 개의 광고가 가로로 나란히 배치되도록 설정 */
         gap: 10px;
         width: 100%; /* 전체 너비 사용 */
     }
@@ -61,29 +75,6 @@
       {{ content }}
       {% include after-content.html %}
     </div>
-
-    {% if page.url != "/" %}
-    <!-- 하단 광고 (데스크탑 전용) -->
-    <div id="footer" class="page__footer desktop-only">
-      <footer>
-        {% include footer/custom.html %}
-        {% include_cached footer.html %}
-
-        <div class="footer-ad">
-          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="1724698171"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-        </div>
-      </footer>
-    </div>
-    {% endif %}
 
     {% if page.url != "/" %}
     <!-- 모바일 전용 광고 -->
